--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <a href="./locations index.html">Locations Index</a>
       <a href="./translations.html">Translations</a>
       <a href="./personae index.html">Personae Index</a>
+      <a href="./downloads.html">Downloads</a>
     </nav>
     </div>
  <div id="map" style="height: 100vh; width: 100%; z-index: 0;">
