--- a/personae index.html
+++ b/personae index.html
@@ -4,13 +4,14 @@
     <body>
         <script src="node_modules/fs/package.json"></script>
         <div id ="nav" style="background-color: rgb(255, 255, 255);">
-          <nav>
-            <a href="./index.html">Home</a>
-            <a href="./acknowledgements.html">Acknowledgements</a>
-            <a href="./locations index.html">Locations Index</a>
-            <a href="./translations.html">Translations</a>
-            <a href="./personae index.html">Personae Index</a>
-          </nav>
+    <nav>
+      <a href="./index.html">Home</a>
+      <a href="./acknowledgements.html">Acknowledgements</a>
+      <a href="./locations index.html">Locations Index</a>
+      <a href="./translations.html">Translations</a>
+      <a href="./personae index.html">Personae Index</a>
+      <a href="./downloads.html">Downloads</a>
+    </nav>
           </div>
           <div>
 <pre>
