--- a/statistics.html
+++ b/statistics.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head></head>
-<body><nav>
+<body>
+    <nav>
       <a href="./index.html">Home</a>
       <a href="./acknowledgements.html">Acknowledgements</a>
       <a href="./locations index.html">Locations Index</a>
       <a href="./translations.html">Translations</a>
+      <a href="./personae index.html">Personae Index</a>
+      <a href="./downloads.html">Downloads</a>
     </nav>
 </body>
 </html>
