changed all pages to include the new nav

--- a/locations index.html
+++ b/locations index.html
@@ -7,11 +7,12 @@
 <body>
         
   <nav>
-    <a href="./index.html">Home</a>
-    <a href="./acknowledgements.html">Acknowledgements</a>
-    <a href="./locations index.html">Locations Index</a>
-    <a href="./translations.html">Translations</a>
-    <a href="./personae index.html">Personae Index</a>
+      <a href="./index.html">Home</a>
+      <a href="./acknowledgements.html">Acknowledgements</a>
+      <a href="./locations index.html">Locations Index</a>
+      <a href="./translations.html">Translations</a>
+      <a href="./personae index.html">Personae Index</a>
+      <a href="./downloads.html">Downloads</a>
   </nav>
   <form>
     <h2>Search database</h2>
