--- a/downloads.html
+++ b/downloads.html
@@ -14,8 +14,8 @@
     <header>
         Downloads
     </header>
-    <a href="/pdfs/toulianxicao.pdf" download="透薕細草.pdf">
-    Download 透薕細草.pdf 
+    <a href="/pdfs/toulianxicao.pdf" download="toulianxicao.pdf">
+    Download toulianxicao.pdf 
     
 </a>
 
